# amendobobos-viagens

./: README.md  pyproject.toml
app/: main.py
app/agents/: prompts.py
app/api/: endpoints.py
app/static/: index.html
data/: manual_blis_v2.md
tests/: test_final_qa.py  test_real_integration.py
